--- a/updateCli.yaml
+++ b/updateCli.yaml
@@ -3,7 +3,7 @@ source:
   spec:
     owner: "jenkins-infra"
     repository: "plugin-site-api"
-    token: "560ff7a139f7aeb5bed1f3acc27d91aa1b23b2a5"
+    token: ""
     username: "olblak"
     version: "latest"
 conditions:
@@ -26,7 +26,7 @@ targets:
         email: "update-bot@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: "560ff7a139f7aeb5bed1f3acc27d91aa1b23b2a5"
+        token: ""
         username: "olblak"
         branch: "master"
   - name: "Chart appVersion"
@@ -41,7 +41,7 @@ targets:
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: "560ff7a139f7aeb5bed1f3acc27d91aa1b23b2a5"
+        token: ""
         username: "olblak"
         branch: "master"
   #    scm: "git"
@@ -50,20 +50,19 @@ targets:
   #      branch: "master"
   #      user: "update-bot"
   #      email: "update-bot@olblak.com"
-  #      directory: /tmp/updateCli545776415
   - name: "Chart Version"
     kind: yaml
     spec:
       file: "charts/plugin-site/Chart.yaml"
       key: version
-      message: "Chart appVersion updated"
+      message: "Chart Version updated"
       scm: "github"
       repository:
         user: "updatecli"
         email: "updatecli@olblak.com"
         owner: "olblak"
         repository: "charts"
-        token: "560ff7a139f7aeb5bed1f3acc27d91aa1b23b2a5"
+        token: ""
         username: "olblak"
         branch: "master"
   #    scm: "git"
@@ -72,4 +71,3 @@ targets:
   #      branch: "master"
   #      user: "update-bot"
   #      email: "update-bot@olblak.com"
-  #      directory: /tmp/updateCli545776415
