--- a/updateCli.yaml
+++ b/updateCli.yaml
@@ -7,14 +7,16 @@ source:
     username: "olblak"
     version: "latest"
 conditions:
-  - name: "Docker Image Published on Registry"
+  docker:
+    name: "Docker Image Published on Registry"
     kind: dockerImage
     spec:
       image: "jenkinsciinfra/plugin-site"
       url: "hub.docker.com"
       tag: latest
 targets:
-  - name: "Docker Image"
+  imageTag:
+    name: "Docker Image"
     kind: yaml
     spec:
       file: "charts/plugin-site/values.yaml"
@@ -29,7 +31,8 @@ targets:
         token: ""
         username: "olblak"
         branch: "master"
-  - name: "Chart appVersion"
+  appVersion:
+    name: "Chart appVersion"
     kind: yaml
     spec:
       file: "charts/plugin-site/Chart.yaml"
@@ -50,7 +53,8 @@ targets:
   #      branch: "master"
   #      user: "update-bot"
   #      email: "update-bot@olblak.com"
-  - name: "Chart Version"
+  chartVersion:
+    name: "Chart Version"
     kind: yaml
     spec:
       file: "charts/plugin-site/Chart.yaml"
