--- a/updateCli.d/jenkins-wiki-exporter.yaml
+++ b/updateCli.d/jenkins-wiki-exporter.yaml
@@ -21,9 +21,8 @@ targets:
     spec:
       file: "charts/jenkins-wiki-exporter/values.yaml"
       key: image.tag
-      message: "[updatecli][jenkins-wiki-exporter] Default image tag updated"
-      scm: "github"
-      repository:
+    scm:
+      github:
         user: "update-bot"
         email: "update-bot@olblak.com"
         owner: "olblak"
@@ -31,15 +30,29 @@ targets:
         token: ""
         username: "olblak"
         branch: "master"
+  #appVersion:
+  #  name: "Chart appVersion"
+  #  kind: yaml
+  #  spec:
+  #    file: "charts/jenkins-wiki-exporter/Chart.yaml"
+  #    key: appVersion
+  #  scm:
+  #    github:
+  #      user: "updatecli"
+  #      email: "updatecli@olblak.com"
+  #      owner: "olblak"
+  #      repository: "charts"
+  #      token: ""
+  #      username: "olblak"
+  #      branch: "master"
   appVersion:
     name: "Chart appVersion"
     kind: yaml
     spec:
       file: "charts/jenkins-wiki-exporter/Chart.yaml"
       key: appVersion
-      message: "[updatecli][jenkins-wiki-exporter] Helm chart appVersion updated"
-      scm: "github"
-      repository:
+    scm:
+      github:
         user: "updatecli"
         email: "updatecli@olblak.com"
         owner: "olblak"
