--- a/examples/updateCli.generic/maven.yaml
+++ b/examples/updateCli.generic/maven.yaml
@@ -22,8 +22,7 @@
 #   2 - Test a yaml condition, "Do we have a docker image set?" 
 #       Test if the key jenkins.master.image is set to the value "jenkins/jenkins" 
 #       from the file "charts/jenkins/values.yaml" located on the git repository 
-#       " git@github.com:olblak/charts.git"
-#       for the "jenkins/jenkins" using the tag "2.264-jdk11"
+#       "tgit@github.com:olblak/charts.git"
 #         => Yes, proceed, No then abort
 #
 #  Targets:
