--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -35,4 +35,6 @@ jobs:
       run: go build -v .
 
     - name: Test
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: go test ./...
