Add DOCKERHUB_TOKEN to github action tests
Signed-off-by: Olivier Vernin <olivier@vernin.me>

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -37,4 +37,5 @@ jobs:
     - name: Test
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       run: go test ./...
