--- a/examples/values.yaml
+++ b/examples/values.yaml
@@ -3,6 +3,7 @@ github:
   email: updatecli@olblak.com
   owner: olblak
   repository: charts
-  token: "UPDATECLI_GITHUB_TOKEN"
+  #token: "UPDATECLI_GITHUB_TOKEN"
+  token: "GITHUB_TOKEN"
   username: olblak
-  branch: alertmanager
+  branch: master
