Add example config stage name
Signed-off-by: Olivier Vernin <olivier@vernin.me>

--- a/examples/updateCli.d/jenkins.yaml
+++ b/examples/updateCli.d/jenkins.yaml
@@ -1,5 +1,6 @@
 source:
   kind: maven
+  name: "Get latest jenkins weekly version from maven repository"
   postfix: "-jdk11"
   spec:
     owner: "maven"
@@ -9,13 +10,13 @@ source:
     artifactID: "jenkins-war"
 conditions:
   docker:
-    name: "Docker Image Published on Registry"
+    name: "Is Docker Image Published on Registry?"
     kind: dockerImage
     spec:
       image: "jenkins/jenkins"
 targets:
   imageTag:
-    name: "Docker Image"
+    name: "Update Jenkins docker image tag"
     kind: yaml
     spec:
       file: "charts/jenkins/values.yaml"
