--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -2,10 +2,10 @@ name: Go
 on:
   push:
     branches:
-    - master
+    - main
   pull_request:
     branches:
-    - master
+    - main
 
 jobs:
 
