--- a/examples/updateCli.d/jenkins.yaml
+++ b/examples/updateCli.d/jenkins.yaml
@@ -29,4 +29,4 @@ targets:
         repository: "charts"
         token: ""
         username: "olblak"
-        branch: "master"
+        branch: "main"
