--- a/examples/updateCli.d/nginx.yaml
+++ b/examples/updateCli.d/nginx.yaml
@@ -19,4 +19,4 @@ targets:
         repository: "charts"
         token: ""
         username: "olblak"
-        branch: "master"
+        branch: "main"
