Replace occurences of Jenkins 'master' by Jenkins 'controller'
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/examples/updateCli.d/jenkins.yaml
+++ b/examples/updateCli.d/jenkins.yaml
@@ -20,7 +20,7 @@ targets:
     kind: yaml
     spec:
       file: "charts/jenkins/values.yaml"
-      key: "jenkins.master.imageTag"
+      key: "jenkins.controller.imageTag"
     scm:
       github:
         user: "updatecli"
