--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -21,7 +21,7 @@ jobs:
       id: go
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
     - name: Get dependencies
       run: |
@@ -31,8 +31,8 @@ jobs:
             dep ensure
         fi
 
-    - name: Run GolangCI-Lint Action
-      uses: matoous/golangci-lint-action@v1.1.0
+    - name: Run golangci-lint
+      uses: actions-contrib/golangci-lint@v1
 
     - name: Test
       env:
