--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -32,8 +32,11 @@ jobs:
             dep ensure
         fi
 
-    - name: Run golangci-lint
-      uses: actions-contrib/golangci-lint@v1
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v2
+      with:
+          # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
+        version: v1.29
 
     - name: Test
       env:
