--- a/.github/workflows/publish-assets.yaml
+++ b/.github/workflows/publish-assets.yaml
@@ -13,6 +13,13 @@ jobs:
       with:
         fetch-depth: 0
 
+    # https://github.com/actions/setup-go
+    - name: Set up Go 1.15
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.15
+      id: go
+      
     - name: Build updateCli
       run: |
         make build.all
