--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -11,7 +11,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
 
     # https://github.com/actions/setup-go
