Update config examples
Signed-off-by: Olivier Vernin <olivier@vernin.me>

--- a/examples/updateCli.generic/maven.yaml
+++ b/examples/updateCli.generic/maven.yaml
@@ -62,7 +62,7 @@ conditions:
     scm:
       git:
         url: "git@github.com:olblak/charts.git"
-        branch: "main"
+        branch: "master"
         user: "olblak"
         email: "me@olblak.com"
 targets:
@@ -75,7 +75,7 @@ targets:
     scm:
       git:
         url: "git@github.com:olblak/charts.git"
-        branch: main
+        branch: master
         user: olblak
         email: me@olblak.com
         directory: "/home/olblak/Project/Jenkins-infra/charts"
