--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -21,16 +21,16 @@ jobs:
         go-version: 1.15
       id: go
 
+    - name: Install GoReleaser
+      uses: goreleaser/goreleaser-action@v2
+      with:
+        install-only: true
+
+    - name: Show GoReleaser version
+      run: goreleaser --version
+
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
 
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v2
@@ -38,11 +38,11 @@ jobs:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
         version: v1.29
 
+    - name: Build
+      run: make build
+
     - name: Test
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       run: make test
-
-    - name: Build
-      run: make build.all
