--- a/.github/release-drafter.yaml
+++ b/.github/release-drafter.yaml
@@ -1,6 +1,6 @@
 ---
-name-template: 'v$NEXT_PATCH_VERSION 🌈'
-tag-template: 'v$NEXT_PATCH_VERSION'
+name-template: 'v$NEXT_MINOR_VERSION 🌈'
+tag-template: 'v$NEXT_MINOR_VERSION'
 categories:
   - title: '🚀 Features'
     labels:
