--- a/.github/workflows/publish-docker-image.yaml
+++ b/.github/workflows/publish-docker-image.yaml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
   release:
     types: [published]
+  pull_request:
 jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
