Docker image: define build target depending on the context
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/.github/workflows/publish-docker-image.yaml
+++ b/.github/workflows/publish-docker-image.yaml
@@ -82,6 +82,8 @@ jobs:
           platforms: linux/amd64 #,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
+          build-args: |
+            MAKE_TARGET=${{ fromJSON('["build.all", "build"]')[github.event_name == 'pull_request'] }}
           labels: |
             org.opencontainers.image.title=${{ fromJson(steps.repo.outputs.result).name }}
             org.opencontainers.image.description=${{ fromJson(steps.repo.outputs.result).description }}
