Add incminor to helmchart example
Signed-off-by: Olivier Vernin <olivier@vernin.me>

--- a/examples/updateCli.generic/helmChart/noSCM.yaml
+++ b/examples/updateCli.generic/helmChart/noSCM.yaml
@@ -14,4 +14,5 @@ targets:
       appVersion: true
       Name: "/tmp/helm-charts/charts/jenkins"
       file: "values.yaml"
+      incminor: true
       key: "controller.tag"
