--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,4 @@
+---
 linters-settings:
   depguard:
     list-type: blacklist
@@ -25,7 +26,7 @@ linters-settings:
       - performance
       - style
     disabled-checks:
-      - dupImport # https://github.com/go-critic/go-critic/issues/845
+      - dupImport   # https://github.com/go-critic/go-critic/issues/845
       - ifElseChain
       - octalLiteral
       - whyNoLint
@@ -56,10 +57,10 @@ linters-settings:
     suggest-new: true
   misspell:
   nolintlint:
-    allow-leading-space: true # don't require machine-readable nolint directives (i.e. with no leading space)
-    allow-unused: false # report any unused nolint directives
-    require-explanation: false # don't require an explanation for nolint directives
-    require-specific: false # don't require nolint directives to be specific about which linter is being skipped
+    allow-leading-space: true   # don't require machine-readable nolint directives (i.e. with no leading space)
+    allow-unused: false         # report any unused nolint directives
+    require-explanation: false  # don't require an explanation for nolint directives
+    require-specific: false     # don't require nolint directives to be specific about which linter is being skipped
 linters:
   # please, do not use `enable-all`: it's deprecated and will be removed soon.
   # inverted configuration with `enable-all` and `disable` is not scalable during updates of golangci-lint
@@ -71,32 +72,32 @@ linters:
     - dogsled
     - errcheck
     - funlen
-      #- gocognit
+    # - gocognit
     - goconst
-      #- gocyclo
-      #- godot
+    # - gocyclo
+    # - godot
     - gofmt
     - goimports
-      #- golint
+    # - golint
     - goprintffuncname
     - gosec
     - gosimple
     - ineffassign
     - interfacer
-      #    - lll
+    # - lll
     - maligned
     - misspell
     - nakedret
     - nolintlint
     - rowserrcheck
     - structcheck
-    #- stylecheck
+    # - stylecheck
     - typecheck
     - unconvert
     - unparam
-      #- unused
+    # - unused
     - varcheck
-      #- whitespace
+    # - whitespace
 issues:
   # Excluding configuration per-path, per-linter, per-text and per-source
   exclude-rules:
@@ -111,6 +112,7 @@ issues:
         - gocritic
       text: "unnecessaryDefer:"
 run:
+  timeout: 5m
   skip-dirs:
     - test/testdata_etc
     - internal/cache
@@ -119,6 +121,6 @@ run:
 # golangci.com configuration
 # https://github.com/golangci/golangci/wiki/Configuration
 service:
-  golangci-lint-version: 1.27.x # use the fixed version to not introduce new linters unexpectedly
+  golangci-lint-version: 1.27.x   # Use the fixed version to not introduce new linters unexpectedly
   prepare:
     - echo "here I can run custom commands, but no preparation needed for this repo"
