--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,8 +1,9 @@
 name: "CodeQL"
 
 on:
+  workflow_dispatch:
   push:
-    branches: [main, ]
+    branches: [main]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [main]
