--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -94,7 +94,7 @@ docker_manifests:
   - name_template: 'ghcr.io/updatecli/updatecli:latest'
     image_templates:
       - 'ghcr.io/updatecli/updatecli:{{ .Tag }}-amd64'
-#      - 'ghcr.io/updatecli/updatecli:{{ .Tag }}-arm64'
+      - 'ghcr.io/updatecli/updatecli:{{ .Tag }}-arm64'
 
 env:
   - GO111MODULE=on
