Run make release.snapshot from PR as well
Signed-off-by: Olivier Vernin <olivier@vernin.me>

--- a/.github/workflows/goreleaser.yaml
+++ b/.github/workflows/goreleaser.yaml
@@ -71,6 +71,8 @@ jobs:
             make release
           elif [[ $GITHUB_REF == refs/heads/main ]]; then
             make release.snapshot
+          else
+            make release.snapshot
           fi
 
       - name: Clean up
