--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,15 +1,11 @@
 ---
 
-name: GoReleaser
+name: Publish Release Assets
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - 'main'
-    tags:
-      - 'v*'
-  pull_request:
+  release:
+    type:
+      - published
 
 jobs:
   build:
@@ -44,18 +40,12 @@ jobs:
         run: goreleaser --version
 
       - name: Login to DockerHub
-        # Secrets and credentials are not available in pull requests
-        # to avoid leaking
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Login to GitHub Docker Registry
-        # Secrets and credentials are not available in pull requests
-        # to avoid leaking
-        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -67,15 +57,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if [[ $GITHUB_REF == refs/tags/v* ]]; then
             make release
-          elif [[ $GITHUB_REF == refs/heads/main ]]; then
-            make release.snapshot
-          else
-            make release.snapshot
-          fi
 
       - name: Clean up
-        if: always() && startsWith(github.ref, 'refs/tags/v')
         run: |
-          rm -f ${HOME}/.docker/config.json
+            rm -f ${HOME}/.docker/config.json
