Add dockerhub credential to go test
Signed-off-by: Olivier Vernin <olivier@vernin.me>

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -49,4 +49,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
         run: make test
