--- a/examples/updateCli.generic/aws_ami.yaml
+++ b/examples/updateCli.generic/aws_ami.yaml
@@ -1,5 +1,6 @@
 sources:
   ami1:
+    name: "Get latest jenkins-agent-ubuntu* ami"
     kind: aws/ami
     spec: 
       region: us-east-2
@@ -7,26 +8,30 @@ sources:
         - name: "name"
           values: "jenkins-agent-ubuntu*"
   ami2:
+    name: "Get latest  ami matching ami-0fbefe596801fce98"
     kind: aws/ami
     spec: 
       region: us-east-2
       filters:
         - name: "image-id"
-          values: "ami-0ff3b7aefa91e0935"
+          values: "ami-0fbefe596801fce98"
 
 conditions:
   ami1:
+    name: Test if ami1 exist
     sourceID: ami1
     kind: aws/ami
     spec:
       region: us-east-2
   ami2:
+    name: Test if ami2 exist
     sourceID: ami2
     kind: aws/ami
     spec:
       region: us-east-2
 targets:
   file:
+    name: Update fictive file
     sourceID: ami1
     kind: file
     spec:
