--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -20,7 +20,7 @@ jobs:
     steps:
 
       # https://github.com/actions/setup-go
-      - name: Set up Go 1.16
+      - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
