chore: always run updatecli diff on workflows
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/.github/workflows/updatecli.yaml
+++ b/.github/workflows/updatecli.yaml
@@ -3,6 +3,8 @@ name: updatecli
 
 on:
   workflow_dispatch:
+  push:
+  pull_request:
   schedule:
     # * is a special character in YAML so you have to quote this string
     # Run every hour
