--- a/.github/workflows/updatecli.yaml
+++ b/.github/workflows/updatecli.yaml
@@ -33,5 +33,5 @@ jobs:
           command: apply
           flags: "--config ./updatecli/updatecli.d"
         env:
-          UPDATECLI_GITHUB_ACTOR: ${{ github.actor }}
-          UPDATECLI_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          UPDATECLI_GITHUB_ACTOR: ${{ secrets.UPDATECLI_BOT_GITHUB_ACTOR }}
+          UPDATECLI_GITHUB_TOKEN: ${{ secrets.UPDATECLI_BOT_GITHUB_TOKEN }}
