feat(condition) allow to disabled input source value for conditions
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/examples/updateCli.generic/shell/shell.yaml
+++ b/examples/updateCli.generic/shell/shell.yaml
@@ -4,11 +4,22 @@ sources:
     kind: shell
     spec:
       command: "./examples/updateCli.generic/shell/source.sh"
-conditions:
-  default:
+  sayHello:
     kind: shell
     spec:
+      command: echo Hello
+conditions:
+  noSource:
+    kind: shell
+    disableSourceInput: true
+    spec:
       command: "./examples/updateCli.generic/shell/condition.sh"
+  withSource:
+    kind: shell
+    sourceID: default
+    spec:
+      command: echo
+
 targets:
   default:
     name: setGrepVersion
