--- a/examples/updateCli.generic/shell/shell.yaml
+++ b/examples/updateCli.generic/shell/shell.yaml
@@ -11,7 +11,7 @@ sources:
 conditions:
   noSource:
     kind: shell
-    disableSourceInput: true
+    disablesourceinput: true
     spec:
       command: "./examples/updateCli.generic/shell/condition.sh"
   withSource:
