--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -44,7 +44,7 @@ dockers:
   - image_templates:
       - 'updatecli/updatecli:{{ .Tag }}-amd64'
       - 'ghcr.io/updatecli/updatecli:{{ .Tag }}-amd64'
-    dockerfile: Dockerfile.release
+    dockerfile: Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
@@ -62,7 +62,7 @@ dockers:
   - image_templates:
       - 'updatecli/updatecli:{{ .Tag }}-arm64'
       - 'ghcr.io/updatecli/updatecli:{{ .Tag }}-arm64'
-    dockerfile: Dockerfile.release
+    dockerfile: Dockerfile
     use: buildx
     build_flag_templates:
       - "--pull"
