--- a/examples/updateCli.generic/file.yaml
+++ b/examples/updateCli.generic/file.yaml
@@ -19,6 +19,16 @@ sources:
     spec:
       file: https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_SHA256SUMS
       line: 3
+  SingleLineFromFileWithPattern:
+    kind: file
+    spec:
+      file: LICENSE
+      matchPattern: 'Copyright.*' # Returns a single line
+  MultipleLinesFromURLWithPattern:
+    kind: file
+    spec:
+      file: https://releases.hashicorp.com/terraform/0.14.5/terraform_0.14.5_SHA256SUMS
+      matchPattern: '.*terraform_.*_linux.*' # Returns a multi-line content as multiple lines are matched
 conditions:
   LocalFileHasSameContentAsSource:
     kind: file
@@ -58,6 +68,12 @@ conditions:
       file: LICENSE
       line: 3
       content: '{{ source `LineFromLocalFile` }}'
+  LocalFileMatchesPattern:
+    kind: file
+    disablesourceinput: true
+    spec:
+      file: "LICENSE"
+      matchPattern: 'Copyright \(c\) (\d*) Olblak'
   ######## Expected Failures
   ## Should fail condition if uncommented
   # LocalFileHasDifferentContentAsSource:
@@ -106,3 +122,23 @@ targets:
       file: LICENSE
       line: 3
       content: oldline was "{{ source `LineFromLocalFile` }}"
+  setLineWithMatchAndReplacePatterns:
+    kind: file
+    sourceID: ContentFromURL
+    spec:
+      file: LICENSE
+      matchPattern: 'Copyright \(c\) (\d*) (.*)'
+      replacepattern: 'Copyright (c) 2021 $2'
+  setLineWithMatchAndContent:
+    kind: file
+    sourceID: ContentFromURL
+    spec:
+      file: LICENSE
+      matchPattern: 'Copyright \(c\) (\d*) (.*)'
+      content: 'Copyright (c) 2021 FooBar'
+  setLineWithMatchAndSource:
+    kind: file
+    sourceID: ContentFromURL
+    spec:
+      file: LICENSE
+      matchPattern: 'Copyright \(c\) (\d*) (.*)'
