chore(examples) update examples for shell and yaml to show more cases
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/examples/updateCli.generic/shell/shell.yaml
+++ b/examples/updateCli.generic/shell/shell.yaml
@@ -1,5 +1,5 @@
 ---
-title: Generic Example for the shell resource
+title: Show a set of shell resources as a generic example
 sources:
   default:
     kind: shell
