chore(release-drafter) ensure that dependabot changes are counted as "maintenance" items in the changelog

--- a/.github/release-drafter.yaml
+++ b/.github/release-drafter.yaml
@@ -12,7 +12,9 @@ categories:
       - 'bugfix'
       - 'bug'
   - title: '🧰 Maintenance'
-    label: 'chore'
+    labels: 
+      - 'chore'
+      - 'dependencies'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 
 template: |
